--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <title>exercice 5</title>
 </head>
 <body><!--formulaire> nombre 1 et 2  + bouton pour valider avec onclick-->
+  <p>Entrez un nombre 1 et un nombre pour obtenir le reste de la division du nombre</p> 
   <form method="post" action="#" id="form1"> <!--obligatoire à mettre-->
-      <label>Nombre1 :<input type="text" name="number1" id="number1"placeholder="Nombre1"/></label>
-      <label>Nombre2 :<input type="text" name="number2" id="number2"placeholder="Nombre2"/></label>
+      <label>Nombre1 :<input type="number" name="number1" id="number1"placeholder="Nombre1"/></label>
+      <label>Nombre2 :<input type="number" name="number2" id="number2"placeholder="Nombre2"/></label>
       <input type="submit" name="button" id="clickButton" onclick="clickFunction()";/>
   </form>
 
